manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microtodoui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microtodoui
  template:
    metadata:
      labels:
        app: microtodoui
    spec:
      containers:
      - name: microtodoui
        image: microtodoui:latest
        ports:
        - containerPort: 80
