manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microtodoui
spec:
  selector:
    app: microtodoui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
